--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 
         <div class="row mt-5">
             <div class="col d-flex justify-content-center">
-                <form method="GET" action="/weather">
+                <form method="GET" action="/result">
 
                     <label class="form-label"><b>Please enter the title:</b></label>
 
