--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-image: url('/Background.jpg');
+            background-image: url('/background.jpg');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
